--- a/music_player_frontend/package.json
+++ b/music_player_frontend/package.json
@@ -22,6 +22,7 @@
     "vite": "^7.1.1"
   },
   "dependencies": {
-    "lucide-react": "^0.539.0"
+    "lucide-react": "^0.539.0",
+    "react-icons": "^5.5.0"
   }
 }
