--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn[standard]
-google-auth
-google-api-python-client
-python-dotenv
+fastapi==0.100.0
+uvicorn==0.22.0
+google-api-python-client==2.97.0
+google-auth==2.24.0
+google-auth-httplib2==0.1.0
+requests==2.31.0
+python-dotenv==1.0.0
